# niveshmap

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_server.py  app.py  packages.txt  pyproject.toml
.github/workflows/: deploy-huggingface.yml
config/: data_readiness.yaml  infrastructure_types.yaml  localities.yaml  sources.yaml  spatial.yaml  suitability.yaml
data/: ncr_real_estate.db
data/processed/: forecaster.pickle  locality_feasibility.csv  phase0_quarterly_panel.csv
data/sample/: delhi_circle_rates.csv  delhi_rera.json  haryana_collector_rates.csv  hrera.json  nhb_residex.csv  pib_approvals.json  transit_events.json  up_circle_rates.csv  up_rera.json
docs/: data_dictionary.md  data_sources.md  limitations.md  map_api_contract.md  map_frontend_handoff.md  methodology.md  personalised_decision_architecture.md  production_setup.md  spatial_architecture.md  spatial_distance_semantics.md  spatial_resolution.md
notebooks/: 00_data_source_audit.ipynb  01_price_proxy_feasibility.ipynb  02_infrastructure_timeline_audit.ipynb  03_ncr_comparability_analysis.ipynb
reports/phase0/: feature_feasibility.md  interaction_feasibility.md  source_audit.md  (+1 more)
scripts/: audit_sources.py  build_phase0_dataset.py  build_spatial_layer.py  collect_phase0.py  start.sh  train_forecaster.py
sql/: schema.sql
tests/: test_dashboard.py  test_geospatial.py  test_map_api.py  test_modeling.py  test_readiness.py  test_source_adapters.py  test_spatial_client.py  test_spatial_intelligence.py  test_suitability.py  test_temporal_leakage.py  test_validation.py
(+48 files in other folders)
