[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncr-real-estate-intelligence"
version = "0.1.0"
description = "NCR Infrastructure-Driven Real Estate Intelligence & Scenario Forecasting Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.6",
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "h3>=4.1.0,<5",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "pytest>=7.3.0",
    "rapidfuzz>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.16.0",
    "httpx>=0.24.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ncr_intelligence"]
